--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "homepage": "https://github.com/alireza5014/bigbluebutton",
     "license": "MIT",
-    "version": "v1.2.6",
+    "version": "v1.2.5",
     "type": "library",
     "authors": [
         {
@@ -27,7 +27,7 @@
     "require": {
         "php": ">=7.0",
         "illuminate/support": "^5.5|^6.0|^7.0|^8.0",
-        "bigbluebutton/bigbluebutton-api-php": "master"
+        "alireza5014/bigbluebutton-api-php": "dev-master"
     },
     "require-dev": {
         "orchestra/testbench": "^4.0",
