--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     ],
     "require": {
         "php": ">=7.0",
-        "illuminate/support": "^5.5|^6.0|^7.0|^8.0",
+        "illuminate/support": "^5.5|^6.0|^7.0|^8.0|^9.0|^10.0|^11.0",
         "alireza5014/bigbluebutton-api-php": "dev-master"
     },
     "require-dev": {
